frontend/test/should_fail/cast_node_edge.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		eval {
			def -e:E-> = (E)n;
		}
	}
}
